tests/NormalTests/paczka1/fuzzy1/13786602.err
Error in line 2: j6fo S626 67,7
Error in line 4: hUy2 A983 15,0
Error in line 13: IRogu7 A983 7,9
Error in line 21: j6fo A983 49,8
Error in line 27: A983 A882 40,0
Error in line 31: j6fo S476 79,3
Error in line 35: BbYE A882 75,74
Error in line 30: BbYE S476 288,1
Error in line 32: A983 S476 1,3
Error in line 24: nZ7I S476 19,2
